---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/promisedResult.ts` (Module 2)

## Source

```ts
export type PromisedResult = Promise<{ result: true | false }>;
```

## Module Info

```
Exports {
  "PromisedResult" => {
    ExportOwnExport => JsOwnExport::Binding(12..26)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
PromisedResult  => BindingTypeData {
  Types Module(0) TypeId(3),
}
```

## Registered types

```
Module TypeId(0) => bool: true

Module TypeId(1) => bool: false

Module TypeId(2) => Object {
  prototype: No prototype
  members: ["result": boolean]
}

Module TypeId(3) => instanceof Promise<Module(0) TypeId(2)>
```

# `/src/index.ts` (Not imported by resolver)

## Source

```ts
import { returnPromiseResult } from "./returnPromiseResult.ts";

const promise = returnPromiseResult();
```

## Module Info

```
Exports {
  No exports
}
Imports {
  "returnPromiseResult" => {
    Specifier: "./returnPromiseResult.ts"
    Resolved path: "/src/returnPromiseResult.ts"
    Import Symbol: returnPromiseResult
  }
}
```

## Registered types

```
Module TypeId(0) => Import Symbol: returnPromiseResult from "/src/returnPromiseResult.ts"

Module TypeId(1) => Call Module(0) TypeId(0)(No parameters)
```

# `/src/returnPromiseResult.ts` (Module 1)

## Source

```ts
import type { PromisedResult } from "./promisedResult.ts";

function returnPromiseResult(): PromisedResult {
	return new Promise((resolve) => resolve({ result: true }));
}

export { returnPromiseResult };
```

## Module Info

```
Exports {
  "returnPromiseResult" => {
    ExportOwnExport => JsOwnExport::Binding(77..96)
  }
}
Imports {
  "PromisedResult" => {
    Specifier: "./promisedResult.ts"
    Resolved path: "/src/promisedResult.ts"
    Import Symbol: PromisedResult
  }
}
```

## Exported Bindings

```
returnPromiseResult => BindingTypeData {
  Types Module(0) TypeId(7),
}
```

## Registered types

```
Module TypeId(0) => Promise

Module TypeId(1) => Module(0) TypeId(7)

Module TypeId(2) => bool: true

Module TypeId(3) => Object {
  prototype: No prototype
  members: ["result": Module(0) TypeId(2)]
}

Module TypeId(4) => instanceof Import Symbol: PromisedResult from "/src/promisedResult.ts"

Module TypeId(5) => sync Function {
  accepts: {
    params: [
      required resolve: unknown
    ]
    type_args: []
  }
  returns: Module(0) TypeId(4)
}

Module TypeId(6) => instanceof Module(0) TypeId(0)

Module TypeId(7) => sync Function "returnPromiseResult" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(4)
}
```

# Module Resolver

## Registered types

```
Full TypeId(0) => namespace for ModuleId(1)

Full TypeId(1) => namespace for ModuleId(2)

Full TypeId(2) => Module(1) TypeId(7)

Full TypeId(3) => instanceof Promise<Module(2) TypeId(2)>
```
